# yazilim-lab-2-haftalik-ders-programi

./: .gitignore  README.md  pyproject.toml
sql/: app_bolum.sql  app_dersler.sql  app_derslik.sql  app_kullanici.sql
src/haftalik_ders_programi/: __init__.py  cli.py  excel_exporter.py  models.py  mysql_repository.py  scheduler.py  seed_loader.py
tests/: test_excel_exporter.py  test_scheduler.py  test_seed_loader.py
